# we-agri

./: README.md  das  pyproject.toml  requirements.txt  user
app/: algo.py  auth.py  crud.py  database.py  knn_predict.py  library.py  login.py  main.py  models.py  owm.py  schemas.py  server.py
pages/: about us.html  about.html  about_us.html  admin.html  forecast.html  forecast2.html  index(mission).html  index.html  login.html  plantae.html  plants.html  profile.html
static/css/: about us.css  about.css  admin.css  asd.css  forecastcss2.css  index(mission).css  index.css  login.css  plants.css  profile.css  weather.css
static/js/: admin.js  forecast.js  index.js  login.js  plants.js  profile.js  script.js
